# kubetils

./: .gitignore  .projectile  LICENSE  NOTES  README.md
src/: BUILD  WORKSPACE  go.mod  go.sum
src/hello/: BUILD.bazel  go.mod  go.sum
src/imagePullSecretAdmission/: BUILD.bazel  admission_test.go  imagepullsecrets.go  main.go  main_test.go
src/imagePullSecretAdmission/cmd/: BUILD.bazel  README.md  admission_controller.go  main.go
src/imagepullsecretadmission/: BUILD.bazel  README.md  imagepullsecrets.go  main.go
