load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com/mmlac/kubetils/hello",
    visibility = ["//visibility:public"],
    deps = ["@io_rsc_quote//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["hello_test.go"],
    embed = [":go_default_library"],
)
